# eng_dados_fundaments2025

./: .gitignore  README.md  end  pyproject.toml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
data/output/: output.xlsx
tests/: test_pipeline.py
