[project]
name = "eng_dados_2025"
version = "0.1.0"
description = "Estudos de Reforço end dados"
authors = [
    {name = "David",email = "davi.hg123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yes (>=0.0.1,<0.0.2)",
    "pandas (>=2.3.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
